  - New Config Option: invite_system.expirationtime
    - default: 0m
    - When set for more than 0m, the amount of time (in minutes) until an invite is considered expired and is removed. Invites are checked for expiration once every hour.
    - Valid values would include: 30s, 30m, 24h, 2d, etc.
    - Closes #4086.
  - Bank history commands added.
    - See new commands below for /t, /n and /ta.
    - Displays a book GUI to the player using the command.
    - When {page} is not specified, up to 10 transactions will be shown.
    - Does not persist across reloads, stop and starts.
  - New Commands:
    - /town bankhistory {pages}
    - /nation bankhistory {pages}
    - /ta town {townname} bankhistory {pages}
    - /ta nation {nationname} bankhistory {pages}
  - New permission nodes:
    - towny.commmand.town.bankhistory
      - child node of towny.command.town.*
    - towny.command.nation.bankhistory
      - child node of towny.command.nation.*
    - towny.command.townyadmin.town.bankhistory
      - child node of towny.command.townyadmin.town.*
    - towny.command.townyadmin.nation.bankhistory
      - child node of towny.command.townyadmin.nation.*
  - Add save method to Towny objects, courtesy of silverwolfg11 with PR #4670.
0.96.5.14:
  - Added Placeholder: %townyadvanced_nation_map_color_hex%, courtesy of Kovalskki with PR #4661.
    - returns the hex colour code of the nation's mapcolor set with /t set mapcolor (seen in dynmap-towny.)
  - es-419.yml updated to 0.97, courtesy of EuGNosii with PR #4675.
  - Fix friendly-fire-disabled message not being sent via TownyMessaging.
  - Fix PreNationEvent cancellation message, courtesy of Warriorrrr with PR #4676.
  - Fix [Not For Sale] being seen when walking into the wilderness from a forsale plot.
  - Fix renamed nations not accepting valid names when there is no cost to change the name.
  - Fix explosive crossbow damage not being considered pvp.