@@ -5726,3 +5726,4 @@ v0.92.0.11:
   - Fix [Not For Sale] being seen when walking into the wilderness from a forsale plot.
   - Fix renamed nations not accepting valid names when there is no cost to change the name.
   - Fix explosive crossbow damage not being considered pvp.
+  - Fix /res tax command being pretty useless.
